--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,13 @@
 # Pil
 .idea
 .DS_Store
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
+
+###> symfony/phpunit-bridge ###
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
