--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -28,6 +28,16 @@ security:
                 login_path: app_login
                 check_path: app_login
 
+            logout:
+                path: app_logout
+
+            custom_authenticator: App\Security\LoginFormAuthenticator
+
+                # where to redirect after logout
+                # target: app_any_route
+
+            entry_point: form_login
+
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
